apps/Paperless-ngx/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f docker-compose.yaml
      -d --volumes persistentVolumeClaim --controller deployments
    kompose.version: 1.21.0 (992df58d8)
  labels:
    io.kompose.service: webserver
  name: webserver
spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  selector:
    io.kompose.service: webserver
status:
  loadBalancer: {}
