apps/Paperless-ngx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx-ingress
  namespace: paperless-ngx
  annotations:
    kubernetes.io/ingress.class: "cloudflare-tunnel" # 使用するIngressコントローラーに応じて変更
spec:
  rules:
  - host: docmgr.akatuki-host.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webserver
            port:
              name: "http"
